--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -16,7 +16,7 @@
   height: 162px;
 }
 .every-supporter2 {
-  width: inherit;
+  width: 100%;
   margin-left: 40px;
   flex-wrap: wrap;
 }
@@ -97,6 +97,7 @@
 @media (max-width: 767.98px) {
   .every-supporter2 {
     margin-bottom: 52px;
+    row-gap: 32px;
   }
 }
 @media (max-width: 575.98px) {
